@@ -46,6 +46,10 @@ else
    JAVA=java
 fi
 
+# ARCADEDB memory options, default uses the available RAM. To set it to a specific value, like 2GB of heap, use "-Xms2G -Xmx2G"
+if [ -z "$ARCADEDB_OPTS_MEMORY" ]; then
+  ARCADEDB_OPTS_MEMORY=""
+fi
 
 if [ -z "$JAVA_OPTS_SCRIPT" ] ; then
     JAVA_OPTS_SCRIPT="-XX:+HeapDumpOnOutOfMemoryError \
@@ -53,10 +57,11 @@ if [ -z "$JAVA_OPTS_SCRIPT" ] ; then
         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED \
         --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED \
         --add-opens java.base/java.lang=ALL-UNNAMED \
+        --add-modules jdk.incubator.vector \
         -Dpolyglot.engine.WarnInterpreterOnly=false \
         -Djava.awt.headless=true \
         -Dfile.encoding=UTF8 \
-        --illegal-access=deny"
+        --enable-native-access=ALL-UNNAMED"
 fi
 
 if [ $# -gt 0 ] ; then
