@@ -78,9 +78,11 @@ if [ -z "$JAVA_OPTS_SCRIPT" ]; then
         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED \
         --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED \
         --add-opens java.base/java.lang=ALL-UNNAMED \
+        --add-modules jdk.incubator.vector \
         -Dpolyglot.engine.WarnInterpreterOnly=false \
         -Djava.awt.headless=true -Dfile.encoding=UTF8 \
-        -Djava.util.logging.config.file=config/arcadedb-log.properties"
+        -Djava.util.logging.config.file=config/arcadedb-log.properties \
+        --enable-native-access=ALL-UNNAMED"
 fi
 
 if [ -z "$ARCADEDB_JMX" ]; then
@@ -100,4 +102,4 @@ exec "$JAVA" $JAVA_OPTS \
   $ARCADEDB_JMX \
   $ARCADEDB_SETTINGS \
   -cp "$ARCADEDB_HOME/lib/*" \
-  $ARGS $* "$@" com.arcadedb.server.ArcadeDBServer
+  $ARGS "$@" com.arcadedb.server.ArcadeDBServer
